syntax = "proto3";

package admin.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/fzf-labs/ai-boilerplate-backend/api/admin/v1;v1";

//系统-工作岗位
service SysPost {
  //系统-工作岗位-创建一条数据
  rpc CreateSysPost(CreateSysPostReq) returns (CreateSysPostReply) {
    option (google.api.http) = {
      post: "/admin/v1/sys_post/create"
      body: "*"
    };
  }
  //系统-工作岗位-更新一条数据
  rpc UpdateSysPost(UpdateSysPostReq) returns (UpdateSysPostReply) {
    option (google.api.http) = {
      post: "/admin/v1/sys_post/update"
      body: "*"
    };
  }
  //系统-工作岗位-更新状态
  rpc UpdateSysPostStatus(UpdateSysPostStatusReq) returns (UpdateSysPostStatusReply) {
    option (google.api.http) = {
      post: "/admin/v1/sys_post/update/status"
      body: "*"
    };
  }
  //系统-工作岗位-删除一条数据
  rpc DeleteSysPost(DeleteSysPostReq) returns (DeleteSysPostReply) {
    option (google.api.http) = {
      post: "/admin/v1/sys_post/delete"
      body: "*"
    };
  }
  //系统-工作岗位-单条数据查询
  rpc GetSysPostInfo(GetSysPostInfoReq) returns (GetSysPostInfoReply) {
    option (google.api.http) = {get: "/admin/v1/sys_post/info"};
  }
  //系统-工作岗位-列表数据查询
  rpc GetSysPostList(GetSysPostListReq) returns (GetSysPostListReply) {
    option (google.api.http) = {get: "/admin/v1/sys_post/list"};
  }
  //系统-工作岗位-选择器
  rpc GetSysPostSelector(GetSysPostSelectorReq) returns (GetSysPostSelectorReply) {
    option (google.api.http) = {get: "/admin/v1/sys_post/selector"};
  }
}

//系统-工作岗位信息
message SysPostInfo {
  string id = 1; // 编号
  string tenantId = 2; // 租户Id
  string name = 3; // 岗位名称
  string code = 4; // 岗位编码
  string remark = 5; // 备注
  int32 sort = 6; // 排序值
  int32 status = 7; // 0=禁用 1=开启
  string createdAt = 8; // 创建时间
  string updatedAt = 9; // 更新时间
}

//请求-系统-工作岗位-创建一条数据
message CreateSysPostReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "name",
        "sort",
        "status"
      ]
    }
  };

  string tenantId = 1 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 64
    }
  ]; // 租户Id
  string name = 2 [(buf.validate.field).string = {
    min_len: 1
    max_len: 50
  }]; // 岗位名称
  string code = 3 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 32
    }
  ]; // 岗位编码
  string remark = 4 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 255
    }
  ]; // 备注
  int32 sort = 5 [(buf.validate.field).int32 = {
    gt: 0
    lte: 64
  }]; // 排序值
  int32 status = 6 [(buf.validate.field).int32 = {
    gt: 0
    lte: 16
  }]; // 0=禁用 1=开启
}

//响应-系统-工作岗位-创建一条数据
message CreateSysPostReply {
  string id = 1; // 编号
}

//请求-系统-工作岗位-更新一条数据
message UpdateSysPostReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "id",
        "name",
        "sort",
        "status"
      ]
    }
  };

  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // 编号
  string tenantId = 2 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 64
    }
  ]; // 租户Id
  string name = 3 [(buf.validate.field).string = {
    min_len: 1
    max_len: 50
  }]; // 岗位名称
  string code = 4 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 32
    }
  ]; // 岗位编码
  string remark = 5 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 255
    }
  ]; // 备注
  int32 sort = 6 [(buf.validate.field).int32 = {
    gt: 0
    lte: 64
  }]; // 排序值
  int32 status = 7 [(buf.validate.field).int32 = {
    gt: 0
    lte: 16
  }]; // 0=禁用 1=开启
}

//响应-系统-工作岗位-更新一条数据
message UpdateSysPostReply {}

//请求-系统-工作岗位-更新状态
message UpdateSysPostStatusReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "id",
        "status"
      ]
    }
  };

  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // 编号
  int32 status = 2 [(buf.validate.field).int32 = {
    gt: 0
    lte: 16
  }]; // 0=禁用 1=开启
}

//响应-系统-工作岗位-更新状态
message UpdateSysPostStatusReply {}

//请求-系统-工作岗位-删除一条数据
message DeleteSysPostReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };

  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // 编号
}

//响应-系统-工作岗位-删除一条数据
message DeleteSysPostReply {}

//请求-系统-工作岗位-单条数据查询
message GetSysPostInfoReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };

  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // 编号
}

//响应-系统-工作岗位-单条数据查询
message GetSysPostInfoReply {
  SysPostInfo info = 1;
}

//请求-系统-工作岗位-列表数据查询
message GetSysPostListReq {
  int32 page = 1; //页码
  int32 pageSize = 2; //页数
  string name = 3; //岗位名称
  string code = 4; //岗位编码
  int32 status = 5; //状态
  repeated string createdAt = 6; //创建时间
}

//响应-系统-工作岗位-列表数据查询
message GetSysPostListReply {
  int32 total = 1; //总数
  repeated SysPostInfo list = 2; // 列表数据
}
message SysPostSelectorItem {
  string id = 1; // 编号
  string name = 2; // 岗位名称
}

message GetSysPostSelectorReq {}

message GetSysPostSelectorReply {
  repeated SysPostSelectorItem list = 1; // 列表数据
}
